--- a/angular.json
+++ b/angular.json
@@ -120,6 +120,10 @@
               "devServerTarget": "hello-website:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     }
